fix(fragment): minor spacing

--- a/src/components/fragments/fragment/fragment.module.css
+++ b/src/components/fragments/fragment/fragment.module.css
@@ -27,7 +27,7 @@
   list-style-type: disc;
   margin-left: 0;
   margin-right: 0;
-  margin-top: 1rem;
+  margin-top: 0.5rem;
   padding-left: 1.5rem;
   padding-right: 1.5rem;
   padding-top: 0;
